--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 file.reference.mysql-connector-java-5.1.49-bin.jar=C:\\Users\\Usuario\\Documents\\mysql-connector-java-5.1.47.tar.gz
 file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Usuario\\Downloads\\mysql-connector-java-8.0.27.zip
-user.properties.file=C:\\Users\\Cristo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-8.0.27.jar-1=C:\\Users\\Usuario\\Documents\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26.jar
+user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
