--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/AED_DAD_Proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AbsoluteLayout-RELEASE125.jar=C:\\Users\\Usuario\\Desktop\\AbsoluteLayout-RELEASE125.jar
 file.reference.mysql-connector-java-5.1.49-bin.jar=C:\\Users\\2DAMAA\\Downloads\\mysql-connector-java-5.1.49-bin.jar
 file.reference.mysql-connector-java-8.0.26.jar=C:\\Users\\Usuario\\Documents\\mysql-connector-java-8.0.26\\mysql-connector-java-8.0.26.jar
 file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Cristo\\Desktop\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
@@ -41,7 +42,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.27.jar}:\
     ${file.reference.mysql-connector-java-5.1.49-bin.jar}:\
     ${file.reference.mysql-connector-java-8.0.27.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.26.jar}
+    ${file.reference.mysql-connector-java-8.0.26.jar}:\
+    ${file.reference.AbsoluteLayout-RELEASE125.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
