--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,8 @@
+compile.on.save=false
+do.depend=false
+do.jar=true
 file.reference.mysql-connector-java-5.1.49-bin.jar=C:\\Users\\Usuario\\Documents\\mysql-connector-java-5.1.47.tar.gz
 file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Usuario\\Downloads\\mysql-connector-java-8.0.27.zip
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Cristo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
