--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=AED_DAD_Proyecto
+application.vendor=Cristo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,6 +31,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/AED_DAD_Proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.49-bin.jar=C:\\Users\\2DAMAA\\Downloads\\mysql-connector-java-5.1.49-bin.jar
 file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Cristo\\Desktop\\mysql-connector-java-8.0.27\\mysql-connector-java-8.0.27.jar
@@ -69,7 +71,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Tablas.Main
+main.class=controller.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
